feat: 메인 - 예약 대기 목록 모달 UI 개발 #8

--- a/front/index.html
+++ b/front/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="src/assets/cife.ico" />
     <link
       href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/static/woff2/SUIT.css"
       rel="stylesheet"
